# homework_499

./: .gitignore
hw2/: README.md  package.xml  setup.py
hw2/hw2/: limiter.py  oscope.py
hw3/: README.md  package.xml  setup.py
hw3/hw3/: data_receiver.py  data_sender.py  logenable_service_client.py  send_service_client.py
hw4/: README.md  package.xml  setup.py
hw4/hw4/: nasa.py  nasa_client.py  oscope.py
hw4/launch/: wave.launch.py
hw5/: README.md  package.xml  rviz_hw5.rviz  setup.py
hw5/hw5/: .camera_capture.py.swp  camera_capture.py  laser_filter.py  people_detector.py  personal_space.py
hw5/launch/: .people_detection.launch.py.swp  people_detection.launch.py
hw6/: CMakeLists.txt  README.md  package.xml
hw6/config/: pj_layout.xml
hw6/launch/: data_launch.xml  oscope_launch.xml
hw6/src/: data_receiver.cpp  data_sender.cpp  limiter.cpp  oscope.cpp
hw7/: CMakeLists.txt  package.xml
hw7/launch/: bartender.launch.py
hw_interfaces/: CMakeLists.txt  package.xml
hw_interfaces/action/: LaunchRocket.action
hw_interfaces/msg/: TestPacket.msg
hw_interfaces/srv/: EnableLogging.srv  SendData.srv
